# recipe-viewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.po
nginx/: nginx.conf
recipe_viewer/: asgi.py  settings.py  urls.py  wsgi.py
recipe_viewer/apps/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipe_viewer/apps/accounts/migrations/: 0001_initial.py
recipe_viewer/apps/recipes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipe_viewer/apps/recipes/management/commands/: import_recipes_json.py  populate_recipes.py
recipe_viewer/apps/recipes/migrations/: 0001_initial.py
recipe_viewer/templates/: base.html
recipe_viewer/templates/accounts/: login.html
recipe_viewer/templates/recipes/: _ingredient_form.html  _ingredient_section.html  _ingredients.html  recipe_creation_form.html  recipe_detail.html  recipe_form.html  recipe_list.html
