[project]
name = "recipe-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datastar-py>=0.7.0",
    "django>=5.2.8",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.1.8",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = [

  # Level 1
  "E",    # pycodestyle
  "F",    # pyflakes
  "W",    # warnings
  "C901", # McCabe,
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade

  # Level 2
  "B",   # flake8-bugbear (common bugs)
  "S",   # bandit (security)
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "FBT", # flake8-boolean-trap

  # Level 3

  "PT",  # flake8-pytest-style (if you use pytest)
  "EM",  # flake8-errmsg (better error messages)
  "G",   # flake8-logging-format
  "ISC", # flake8-implicit-str-concat
  "Q",   # flake8-quotes (consistent quote style)

]
ignore = [
  "S101",   # Use of assert (common in tests)
  "FBT001", # Boolean positional arg in function definition
  "FBT002", # Boolean default arg in function definition
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]  # Ignore hardcoded password checks in tests

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "recipe_viewer.settings"
